# minecraft_results

./: README.md  config.json  craft_decoration__painting__simple__s0.mcpr  craft_leather_armor__leather_leggings__simple__s0.mcpr  craft_transport__rail__simple__s0.mcpr  craft_wood_building__oak_door__simple__s0.mcpr  lesson2.md  pyproject.toml  score.json  trace.json
neverplayalone_backend/: __init__.py
neverplayalone_backend/api/: auth.py  config.py  main.py  models.py  store.py
neverplayalone_backend/rounds/: __init__.py  service.py
neverplayalone_backend/scoreboards/: __init__.py  service.py
neverplayalone_backend/storage/: service.py
neverplayalone_backend/submissions/: __init__.py  checks.py  service.py
neverplayalone_backend/utils/: time.py
tests/: conftest.py  test_backend_api.py
