[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neverplayalone-api"
version = "0.1.0"
description = "Never Play Alone backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
npa-api = "neverplayalone_backend.api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["neverplayalone_backend*"]

